--- a/src/vox_files/prompts/Makefile
+++ b/src/vox_files/prompts/Makefile
@@ -40,7 +40,7 @@ BUILD_DIRS =
 ALL_DIRS= 
 
 PROMPTFILES = time.data tel.data uniphone.data date.data \
-              weather.data 3ph.data
+              weather.data 3ph.data jtime.data
 
 FILES = Makefile $(PROMPTFILES)
 
