--- a/src/Makefile
+++ b/src/Makefile
@@ -36,8 +36,8 @@
 ###########################################################################
 TOP=..
 DIRNAME=src
-BUILD_DIRS = general
-ALL_DIRS= db_example diphones intonation duration unitsel \
+BUILD_DIRS = general diphones
+ALL_DIRS= db_example intonation duration unitsel \
           ldom vox_diphone vox_files prosody $(BUILD_DIRS)
 FILES = Makefile 
 
