--- a/src/unitsel/Makefile
+++ b/src/unitsel/Makefile
@@ -37,8 +37,8 @@
 TOP=../../
 DIRNAME=src/unitsel
 SCHEMEFILES = CLUNITS_clunits.scm build_clunits.scm
-SCRIPTS = setup_clunits make_mcep
-OTHERS = unitsel.desc
+SCRIPTS = setup_clunits make_mcep build3
+OTHERS = unitsel.desc syllabic.scm
 
 FILES = Makefile $(SCRIPTS) $(SCHEMEFILES) $(OTHERS)
 
