Ignore the build output.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ config/config
 make.depend
 
 src/diphones/make_diph_index
+src/eval/text2utts
 src/general/cmn
 src/general/find_unknowns
 src/general/fix_pm
