Ignore the build output.

--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,45 @@ config/config
 make.depend
 
 src/diphones/make_diph_index
-src/eval/text2utts
+src/ehmm/bin/FeatureExtraction
+src/ehmm/bin/check_lab.pl
+src/ehmm/bin/comp_dcep.pl
+src/ehmm/bin/do_ehmm
+src/ehmm/bin/edec
+src/ehmm/bin/ehmm
+src/ehmm/bin/getwavlist.pl
+src/ehmm/bin/phfromutt.pl
+src/ehmm/bin/phseq.scm
+src/ehmm/bin/rem_ssil.pl
+src/ehmm/bin/scale_feat.pl
+src/ehmm/bin/seqproc.pl
+src/ehmm/bin/sl2nm.pl
+src/ehmm/bin/sym2nm.pl
+src/eval/wave2html
 src/general/cmn
 src/general/find_unknowns
 src/general/fix_pm
-src/general/mplpc
 src/general/phonealign
 src/general/powcont_norm
 src/general/smooth_f0
+src/promptselect/text2utts
+src/vc/src/analysis/analysis
+src/vc/src/cov2dia/cov2dia
+src/vc/src/dtw/dtw
+src/vc/src/extdim/extdim
+src/vc/src/extfrm/extfrm
+src/vc/src/f0map/f0map
+src/vc/src/f0stats/f0stats
+src/vc/src/gmm/gmm_jde
+src/vc/src/gmmmap/gmmmap
+src/vc/src/gmmpara/gmm_para
+src/vc/src/jdmat/jdmat
+src/vc/src/lib/libsp.a
+src/vc/src/lib/libsub.a
+src/vc/src/mlpg/delta
+src/vc/src/mlpg/mlpg
+src/vc/src/mlpg/mlpg_vit
+src/vc/src/synthesis/synthesis
+src/vc/src/utt2f0/utt2f0
+src/vc/src/vq/lbg
+src/vc/src/vqlbl/vqlbl
