--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ CHANGELOG.html
 README.html
 
 *.o
+*.a
 
 config.*
 install-sh
@@ -41,6 +42,8 @@ src/general/fix_pm
 src/general/phonealign
 src/general/powcont_norm
 src/general/smooth_f0
+src/interslice/bin/
+src/mllr/mllr
 src/promptselect/text2utts
 src/vc/src/analysis/analysis
 src/vc/src/cov2dia/cov2dia
@@ -53,8 +56,6 @@ src/vc/src/gmm/gmm_jde
 src/vc/src/gmmmap/gmmmap
 src/vc/src/gmmpara/gmm_para
 src/vc/src/jdmat/jdmat
-src/vc/src/lib/libsp.a
-src/vc/src/lib/libsub.a
 src/vc/src/mlpg/delta
 src/vc/src/mlpg/mlpg
 src/vc/src/mlpg/mlpg_vit
